[metadata]
name = unixtime
version = file: VERSION
description = A helper for correct use and creation of unix timestamps
author = Terrel Shumway
author_email = dev@strategicprogrammer.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = unix timestamp, datetime
url = https://github.com/lernisto/unixtime
classifiers=
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = True
include_package_data = True
install_requires=
    Click
